# TripWeave

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/backend/: .dockerignore  Dockerfile  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_enable_postgis.py  0002_create_domain_foundation.py  0003_allow_editor_trip_member_role.py  0004_add_ingest_media_job_type.py  0005_add_media_original_metadata.py  0006_add_guest_invitations.py  0007_add_reconstruction_tables.py  0008_add_review_edit_operations.py  0009_add_collaboration_intelligence.py  0010_add_story_publication.py  0011_add_timeline_notes.py  0012_add_original_retention_state.py  0013_add_story_draft_projections.py  0014_add_story_photo_projections.py
services/backend/src/tripweave/: config.py  logging.py
services/backend/src/tripweave/adapters/: orm.py  (+12 more)
services/backend/tests/: __init__.py  blob_store_contract.py  factories.py  fake_blob_store.py  test_api_health.py  test_architecture_boundaries.py  test_auth_domain.py  test_auth_trips_integration.py  test_database_integration.py  test_domain_foundation.py  test_fake_blob_store.py  test_geocoder_configuration.py  test_local_blob_store.py  test_local_web_origins.py  test_media_processing.py  test_oci_blob_store.py  test_publication.py  test_publication_asset_urls.py  test_reconstruction.py  test_status.py  test_storage_configuration.py
services/backend/tests/integration/: __init__.py  test_oci_blob_store_contract.py
(+96 files in other folders)
